--- a/AvatarCatan2.2/app/src/main/res/layout/activity_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/activity_battle_ground.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="catan.avatar.matt.avatarcatan22.OffensiveTeamChoiceActivity">
+    tools:context="catan.avatar.matt.avatarcatan22.BattleGroundActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_offensive_team_choice" />
+    <include layout="@layout/content_battle_ground" />
 
 </android.support.design.widget.CoordinatorLayout>
