--- a/AvatarCatan2.2/app/src/main/res/layout/content_units.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_units.xml
@@ -4,12 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.UnitsActivity"
-    tools:showIn="@layout/activity_units">
+    tools:showIn="@layout/activity_units"
+    android:background="#000000">
 
+    <ExpandableListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/expandableListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="false"
+        android:divider="#444666"
+        android:dividerHeight="0.5dp"/>
 </RelativeLayout>
