--- a/AvatarCatan2.2/app/src/main/res/layout/expanded_list_child.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/expanded_list_child.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:weightSum="1"
+    android:background="#767676">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,5 +12,8 @@
         android:id="@+id/textView9"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:textColor="#000000"/>
+        android:textSize="18dp"
+        android:background="#767676"
+        android:textColor="#000000"
+        android:text="Attack6: 2\nAttack 20: 2\nEvasion: 10\nDefense: 30\nLife: 30\nIntelligence: 10\nBending Type: Phychic Blood Bending\nNumber of Attacks: 3\n \n\nMinimum Requirement:\n Southern Airtemple &amp; Southern Water Tribe + 3 Settlements(Water + Fire + Earth)" />
 </LinearLayout>
