--- a/AvatarCatan2.2/app/src/main/res/layout/list_unit.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/list_unit.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left|center">
+
+        <ImageView
+            android:layout_width="98dp"
+            android:layout_height="98dp"
+            android:id="@+id/imageView2"
+            android:src="@drawable/avatar"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Sword Mater PianDao"
+            android:id="@+id/textView11"
+            android:textColor="#ffffff" />
+    </LinearLayout>
 </LinearLayout>
