--- a/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
@@ -27,7 +27,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Choose Attacking Heroes:"
+                android:text="Choose Defending Heroes:"
                 android:id="@+id/textView2"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:text="Team:"
+                android:text="Defending Team:"
                 android:id="@+id/textView3"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
