--- a/AvatarCatan2.2/app/src/main/res/layout/content_offensive_team_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_offensive_team_choice.xml
@@ -38,7 +38,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Team:"
+                android:text="Attacking Team:"
                 android:id="@+id/textView3"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
