--- a/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
@@ -4,15 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.BattleGroundActivity"
-    tools:showIn="@layout/activity_battle_ground"
-    android:background="#000000"
-    >
+    tools:showIn="@layout/activity_battle_ground">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -32,9 +26,10 @@
                 android:text="Defending Army"
                 android:id="@+id/textView4"
                 android:layout_weight="0.1"
-                android:background="#ff6868"
+                android:background="#1a8b80"
                 android:textSize="30dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="#000000" />
 
             <GridLayout
                 android:layout_width="match_parent"
@@ -48,7 +43,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:layout_weight="0.05"
-            android:background="#ff6868"
+            android:background="#24beaf"
             android:gravity="center" />
 
         <TextView
@@ -56,7 +51,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView6"
             android:layout_weight="0.05"
-            android:background="#869afe"
+            android:background="#000000"
             android:gravity="center" />
 
         <LinearLayout
@@ -76,9 +71,10 @@
                 android:text="Assailing Army"
                 android:id="@+id/textView5"
                 android:layout_weight="0.1"
-                android:background="#869afe"
+                android:background="#000000"
                 android:textSize="30dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="#1a8b80" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
