--- a/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
@@ -7,9 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.DefensiveTeamChoiceActivity"
     tools:showIn="@layout/activity_defensive_team_choice"
-    android:background="#000000"
     >
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -19,72 +17,75 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.15">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Choose Defending Heroes:"
+                android:text="Choose Defending Units:"
                 android:id="@+id/textView2"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
-                android:textColor="#83fc81"
                 android:textStyle="bold"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="10dp" />
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Defending Team:"
                 android:id="@+id/textView3"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
-                android:layout_gravity="bottom"
-                android:textColor="#83fc81"
-                android:textStyle="bold"
                 android:textSize="25dp"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textStyle="bold"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75">
+            android:layout_weight="0.8">
 
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/listView"
+                android:id="@+id/listView3"
                 android:layout_gravity="bottom|center_vertical|right"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+                android:divider="#1d998d"
+                android:dividerHeight="2dp"/>
 
-            <ListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/listView2"
-                android:layout_weight="0.5" />
-        </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:gravity="right"
-            android:layout_gravity="right">
+                <ListView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/listView4"
+                    android:layout_weight="0.5"
+                    android:divider="#1d998d"
+                    android:dividerHeight="2dp"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Continue"
-                android:id="@+id/continueButt2"
-                android:layout_weight="0.1"
-                android:gravity="center"
-                android:background="#199624" />
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Continue"
+                    android:id="@+id/continueButt2"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:background="#1d998d" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
