--- a/AvatarCatan2.2/app/src/main/res/layout/content_offensive_team_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_offensive_team_choice.xml
@@ -7,7 +7,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.OffensiveTeamChoiceActivity"
     tools:showIn="@layout/activity_offensive_team_choice"
-    android:background="#000000"
     >
     <LinearLayout
         android:orientation="vertical"
@@ -18,72 +17,76 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.15">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Choose Attacking Heroes:"
+                android:text="Choose Attacking Units:"
                 android:id="@+id/textView2"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
                 android:textStyle="bold"
-                android:textColor="#c9c4c4"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:paddingLeft="5dp"
+                android:paddingBottom="10dp" />
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Attacking Team:"
                 android:id="@+id/textView3"
                 android:layout_weight="0.5"
                 android:gravity="left|center"
-                android:layout_gravity="bottom"
-                android:textColor="#c9c4c4"
                 android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75">
+            android:layout_weight="0.8">
 
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/listView"
                 android:layout_gravity="bottom|center_vertical|right"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+                android:divider="#1d998d"
+                android:dividerHeight="2dp"/>
 
-            <ListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/listView2"
-                android:layout_weight="0.5" />
-        </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:gravity="right"
-            android:layout_gravity="right">
+                <ListView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/listView2"
+                    android:layout_weight="0.5"
+                    android:divider="#1d998d"
+                    android:dividerHeight="2dp"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Continue"
-                android:id="@+id/continueButt1"
-                android:layout_weight="0.1"
-                android:gravity="center"
-                android:background="#8a8484" />
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Continue"
+                    android:id="@+id/continueButt1"
+                    android:gravity="center"
+                    android:background="#24beaf"
+                    android:padding="20dp"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
