--- a/AvatarCatan2.2/app/src/main/res/layout/content_settlement_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_settlement_choice.xml
@@ -6,65 +6,103 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.SettlementChoiceActivity"
-    tools:showIn="@layout/activity_settlement_choice"
-    android:background="#000000">
+    tools:showIn="@layout/activity_settlement_choice">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#ffffff">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Settlement type in which battle takes place:"
+            android:text="Defense bonus for settlement:"
             android:id="@+id/textView7"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:layout_weight="0.1"
-            android:textColor="#ff6bfa"
-            android:textSize="30dp" />
+            android:textColor="#177b71"
+            android:textSize="30dp"
+            android:background="#ffffff" />
 
-        <Button
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="None"
-            android:id="@+id/set1"
-            android:layout_weight="0.2"
-            android:background="#e504ed"
-            android:textStyle="bold"
-            android:textSize="40dp" />
+            android:layout_weight="0.2">
 
-        <Button
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="None"
+                android:id="@+id/set1"
+                android:layout_weight="0.2"
+                android:textStyle="bold"
+                android:textSize="40dp"
+                android:outlineProvider="bounds"
+                android:background="#ffffff" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Village"
-            android:id="@+id/set2"
             android:layout_weight="0.2"
-            android:background="#bd01b4"
-            android:textStyle="bold"
-            android:textSize="40dp" />
+            android:background="#24beaf"
+            android:layout_margin="10dp"
+            android:padding="5dp">
 
-        <Button
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Village"
+                android:id="@+id/set2"
+                android:layout_weight="0.2"
+                android:textStyle="bold"
+                android:textSize="40dp"
+                android:background="#ffffff"
+                android:gravity="center"
+                android:padding="5dp" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Town"
-            android:id="@+id/set3"
             android:layout_weight="0.2"
-            android:background="#8f0292"
-            android:textSize="40dp"
-            android:textStyle="bold" />
+            android:layout_margin="10dp"
+            android:background="#24beaf"
+            android:padding="15dp">
 
-        <Button
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Town"
+                android:id="@+id/set3"
+                android:layout_weight="0.2"
+                android:background="#ffffff"
+                android:textSize="40dp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="City"
-            android:id="@+id/set4"
             android:layout_weight="0.2"
-            android:background="#6e007d"
-            android:textStyle="bold"
-            android:textSize="40dp" />
+            android:background="#24beaf"
+            android:layout_margin="10dp"
+            android:padding="45dp">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="City"
+                android:id="@+id/set4"
+                android:layout_weight="0.2"
+                android:background="#ffffff"
+                android:textStyle="bold"
+                android:textSize="40dp" />
+        </FrameLayout>
+
     </LinearLayout>
 </RelativeLayout>
