--- a/AvatarCatan2.2/app/src/main/res/layout/expanded_list_parent.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/expanded_list_parent.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="left|center">
+        android:gravity="left|center"
+        android:background="#000000">
 
         <ImageView
             android:layout_width="150dp"
@@ -31,7 +32,8 @@
             android:layout_weight="6"
             android:gravity="left|center"
             android:paddingLeft="10dp"
-            android:textSize="28dp" />
+            android:textSize="28dp"
+            android:textColor="#24beaf" />
 
         <TextView
             android:layout_width="wrap_content"
