--- a/AvatarCatan2.2/app/src/main/res/layout/list_unit_d.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/list_unit_d.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000">
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left|center">
+        android:gravity="left|center"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
 
         <ImageView
-            android:layout_width="98dp"
-            android:layout_height="98dp"
-            android:id="@+id/imageView2"
-            android:src="@drawable/avatar"/>
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:id="@+id/imageView007"
+            android:src="@drawable/avatar"
+            android:padding="10dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Sword Mater PianDao"
-            android:id="@+id/textView11"
-            android:textColor="#ffffff" />
+            android:id="@+id/textView007"
+            android:paddingLeft="20dp" />
     </LinearLayout>
 </LinearLayout>
