--- a/AvatarCatan2.2/app/src/main/res/values/colors.xml
+++ b/AvatarCatan2.2/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#1c968a</color>
+    <color name="colorPrimaryDark">#1a8b80</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
