--- a/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
@@ -24,7 +24,7 @@
             android:id="@+id/button2"
             android:layout_gravity="right|center_vertical"
             android:backgroundTint="#000000"
-            android:textSize="60dp"
+            android:textSize="60sp"
             android:layout_weight="0.25"
             android:clickable="false"
             android:nestedScrollingEnabled="false"
