--- a/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
@@ -7,74 +7,83 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="catan.avatar.matt.avatarcatan22.BattleGroundActivity"
     tools:showIn="@layout/activity_battle_ground">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#fd6767">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.45">
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="5"
+            android:background="#ffffff"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Offensive Army"
+                android:id="@+id/textView"
+                android:rotation="180"
+                android:layout_weight="1"
+                android:background="#24beaf"
+                android:gravity="center"
+                android:textSize="25dp" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/scrollView2"
+                android:layout_weight="9"
+                android:rotation="180"
+                android:fillViewport="false">
+
+                <GridView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/gridView" />
+            </ScrollView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="5"
+            android:background="#ffffff"
+            android:layout_marginTop="10dp">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/scrollView"
+                android:layout_weight="9"
+                android:fillViewport="false">
+
+                <GridView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/gridView2" />
+            </ScrollView>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Defending Army"
                 android:id="@+id/textView4"
-                android:layout_weight="0.1"
-                android:background="#1a8b80"
-                android:textSize="30dp"
-                android:gravity="center"
-                android:textColor="#000000" />
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:nestedScrollingEnabled="false"></GridLayout>
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:layout_weight="0.05"
-            android:background="#24beaf"
-            android:gravity="center" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            android:layout_weight="0.05"
-            android:background="#000000"
-            android:gravity="center" />
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.45">
-
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.9"></GridLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Assailing Army"
-                android:id="@+id/textView5"
-                android:layout_weight="0.1"
+                android:layout_weight="1"
                 android:background="#000000"
-                android:textSize="30dp"
                 android:gravity="center"
-                android:textColor="#1a8b80" />
+                android:textColor="#24beaf"
+                android:textSize="25dp" />
         </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
