--- a/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="catan.avatar.matt.avatarcatan22.MainMenuActivity"
+    tools:context=".ActivityMainMenu"
     android:background="#ffffff">
 
     <LinearLayout
