--- a/AvatarCatan2.2/app/src/main/res/layout/activity_timer.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/activity_timer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="catan.avatar.matt.avatarcatan22.TimerActivity">
+    tools:context=".ActivityTimer">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
