--- a/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_defensive_team_choice.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="catan.avatar.matt.avatarcatan22.DefensiveTeamChoiceActivity"
+    tools:context=".ActivityDefensiveTeamChoice"
     tools:showIn="@layout/activity_defensive_team_choice"
     >
     <LinearLayout
