--- a/AvatarCatan2.2/app/src/main/res/layout/content_load_battle.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_load_battle.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="catan.avatar.matt.avatarcatan22.LoadBattleActivity"
+    tools:context=".ActivityLoadBattle"
     tools:showIn="@layout/activity_load_battle">
 
 </RelativeLayout>
