--- a/AvatarCatan2.2/app/src/main/res/layout/content_settlement_choice.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_settlement_choice.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="catan.avatar.matt.avatarcatan22.SettlementChoiceActivity"
+    tools:context=".ActivitySettlementChoice"
     tools:showIn="@layout/activity_settlement_choice">
     <LinearLayout
         android:orientation="vertical"
