remove blocker function

--- a/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_battle_ground.xml
@@ -85,7 +85,7 @@
             android:clickable="true"
             android:numColumns="5"
             android:stretchMode="columnWidth"
-            />
+            android:background="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
