--- a/AvatarCatan2.2/app/src/main/res/layout/content_rules.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/content_rules.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ActivityRules"
-    tools:showIn="@layout/activity_rules">
+    tools:showIn="@layout/activity_rules"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <TextView
+        android:text="Avatar Catan Rules"
+        android:layout_height="match_parent"
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_weight="10"
+        android:gravity="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="35sp" />
+
+    <TextView
+        android:text="@string/rules"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView"
+        android:typeface="serif"
+        android:padding="20dp"
+        android:layout_weight="1" />
+</LinearLayout>
