--- a/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
+++ b/AvatarCatan2.2/app/src/main/res/layout/activity_main_menu.xml
@@ -37,9 +37,9 @@
             android:id="@+id/button3"
             android:layout_gravity="center_horizontal|bottom"
             android:backgroundTint="#000000"
-            android:textSize="60dp"
             android:layout_weight="0.25"
-            android:textColor="#24beaf" />
+            android:textColor="#24beaf"
+            android:textSize="60sp" />
 
         <Button
             android:layout_width="match_parent"
@@ -48,30 +48,40 @@
             android:id="@+id/button"
             android:layout_gravity="center_horizontal|top"
             android:backgroundTint="#000000"
-            android:textSize="60dp"
             android:layout_weight="0.25"
-            android:textColor="#24beaf" />
+            android:textColor="#24beaf"
+            android:textSize="60sp" />
+
+        <!--<Button-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Load Battle"-->
+            <!--android:id="@+id/button5"-->
+            <!--android:layout_gravity="center_horizontal|top"-->
+            <!--android:backgroundTint="#000000"-->
+            <!--android:layout_weight="0.25"-->
+            <!--android:textColor="#24beaf"-->
+            <!--android:textSize="60sp" />-->
+
+        <!--<Button-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Timer"-->
+            <!--android:id="@+id/button4"-->
+            <!--android:layout_gravity="center_horizontal|top"-->
+            <!--android:backgroundTint="#000000"-->
+            <!--android:layout_weight="0.25"-->
+            <!--android:textColor="#24beaf"-->
+            <!--android:textSize="60sp" />-->
 
         <Button
+            android:text="Calculator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Load Battle"
-            android:id="@+id/button5"
-            android:layout_gravity="center_horizontal|top"
-            android:backgroundTint="#000000"
-            android:textSize="60dp"
+            android:id="@+id/calculator"
             android:layout_weight="0.25"
-            android:textColor="#24beaf" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Timer"
-            android:id="@+id/button4"
-            android:layout_gravity="center_horizontal|top"
             android:backgroundTint="#000000"
-            android:textSize="60dp"
-            android:layout_weight="0.25"
+            android:textSize="60sp"
             android:textColor="#24beaf" />
 
     </LinearLayout>
